--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sync-child-process",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Run a subprocess synchronously and interactively in Node.js",
   "repository": "sass/sync-child-process",
   "author": "Google Inc.",
@@ -34,6 +34,7 @@
     "npm-run-all": "^4.1.5",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.2.1",
+    "typedoc": "^0.26.11",
     "typescript": "^5.0.2"
   },
   "dependencies": {
