Run compile before publish (#3)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,6 +59,7 @@ jobs:
           check-latest: true
           registry-url: 'https://registry.npmjs.org'
       - run: npm install
+      - run: npm run compile
       - run: npm publish
         env:
           NODE_AUTH_TOKEN: '${{ secrets.NPM_TOKEN }}'
